--- a/404-federalist-client.html
+++ b/404-federalist-client.html
@@ -1,5 +1,6 @@
 <html lang="en">
     <head>
+        <title>404 Error, Page Not Found</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <style>
             #main {
