--- a/404-federalist-client.html
+++ b/404-federalist-client.html
@@ -45,8 +45,7 @@
                 This is a default 404 page for <a href='https://federalist.18f.gov'>Federalist</a>, a hosting service for federal websites.
             </p>
             <svg width="30px" height="30px" viewBox="0 0 30 30" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                <!-- Generator: Sketch 48.2 (47327) - http://www.bohemiancoding.com/sketch -->
-                <title>Shape</title>
+                <title>Federalist logo (quill inside circle)</title>
                 <desc>Created with Sketch.</desc>
                 <defs></defs>
                 <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
