Fix closing anchor tag

--- a/404-federalist-client.html
+++ b/404-federalist-client.html
@@ -39,7 +39,7 @@
                 <span id="title">404 / Page not found</span>
             </h1>
             <p>
-                You might want to double-check your link and try again, or return to the <a href="/">homepage<a/>.
+                You might want to double-check your link and try again, or return to the <a href="/">homepage</a>.
             </p>
             <p id="federalist-explanation">
                 This is a default 404 page for <a href='https://federalist.18f.gov'>Federalist</a>, a hosting service for federal websites.
