--- a/404-pages-client.html
+++ b/404-pages-client.html
@@ -21,7 +21,7 @@
                 padding-bottom: 2px;
                 border-bottom: 3px solid #205493;
             }
-            #federalist-explanation {
+            #pages-explanation {
                 font-style: italic;
             }
             body {
@@ -41,11 +41,11 @@
             <p>
                 You might want to double-check your link and try again, or return to the <a href="/">homepage</a>.
             </p>
-            <p id="federalist-explanation">
-                This is a default 404 page for <a href='https://federalist.18f.gov'>Federalist</a>, a hosting service for federal websites.
+            <p id="pages-explanation">
+                This is a default 404 page for <a href='https://cloud.gov/pages'>Pages</a>, a hosting service for federal websites.
             </p>
             <svg width="30px" height="30px" viewBox="0 0 30 30" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                <title>Federalist logo (quill inside circle)</title>
+                <title>Pages logo (quill inside circle)</title>
                 <desc>Created with Sketch.</desc>
                 <defs></defs>
                 <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
